Id Keyword addded, new class: counter. Now ifdata use counter objects instead of double and int.
D    updown.h
AM   counter.cc
AM   counter.h
M    ChangeLog
_M   iface.cc
MM   ifdata.cc
_M   iface.h
MM   ifdata.h

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 *2004-05-03 Skyhusker
+  Redefined ifdata for use counter class (ok, i was bored this afternoon)
+
+*2004-05-03 Skyhusker
   Initial import
   Class ifdata implemented
   Ayoze joined
+
