--- a/ChangeLog
+++ b/ChangeLog
@@ -5,4 +5,6 @@
   Initial import
   Class ifdata implemented
   Ayoze joined
-
+*2004-05-06
+  Moving to BerliOS (thanks ;-))
+  Definitive name decided: our proyect will be called NetMeterd
