--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,7 @@
+*2004-05-06 Skyhusker
+  Moving to BerliOS (thanks ;-))
+  Definitive name decided: our proyect will be called NetMeterd
+
 *2004-05-03 Skyhusker
   Redefined ifdata for use counter class (ok, i was bored this afternoon)
 
@@ -5,6 +9,3 @@
   Initial import
   Class ifdata implemented
   Ayoze joined
-*2004-05-06
-  Moving to BerliOS (thanks ;-))
-  Definitive name decided: our proyect will be called NetMeterd
