--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,6 @@
+*2004-05-12 Skyhusker
+  After some days of intensive work, we'll release a usable version soon
+
 *2004-05-09 Skyhusker
   Class counter redefined
   Class ifdata will be dropped soon
